--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.80"
+clap = { version = "4.5.1", features = ["derive"] }
+hcl-rs = "0.16.7"
+merge-yaml-hash = "0.3.0"
+ron = "0.8.1"
+serde = "1.0.197"
+serde_json = "1.0.114"
+trustfall = "0.7.1"
+yaml-rust = "0.4.5"
