--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,11 @@ anyhow = "1.0.80"
 clap = { version = "4.5.1", features = ["derive"] }
 hcl-rs = "0.16.7"
 merge-yaml-hash = "0.3.0"
+openapiv3 = "2.0.0"
 ron = "0.8.1"
 serde = "1.0.197"
 serde_json = "1.0.114"
+serde_yaml = "0.9.32"
+simplelog = { version = "0.12.1", features = ["paris"] }
 trustfall = "0.7.1"
 yaml-rust = "0.4.5"
