--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,12 @@ edition = "2021"
 anyhow = "1.0.80"
 clap = { version = "4.5.1", features = ["derive"] }
 hcl-rs = "0.16.7"
+hn_api = "0.1.0"
 merge-yaml-hash = "0.3.0"
 openapiv3 = "2.0.0"
+reqwest = { version = "0.11.24", features = ["blocking", "json"] }
 ron = "0.8.1"
-serde = "1.0.197"
+serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
 simplelog = { version = "0.12.1", features = ["paris"] }
