--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,11 +20,8 @@ eula = false
 anyhow = "1.0.80"
 clap = { version = "4.5.1", features = ["derive"] }
 hcl-rs = "0.16.7"
-hn_api = "0.1.0"
 merge-yaml-hash = "0.3.0"
 openapiv3 = "2.0.0"
-reqwest = { version = "0.11.24", features = ["blocking", "json"] }
-ron = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
@@ -46,6 +43,15 @@ ci = ["github"]
 # The installers to generate for each app
 installers = ["shell", "powershell", "msi"]
 # Target platforms to build apps for (Rust target-triple syntax)
-targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
+targets = [
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-unknown-linux-gnu",
+    "x86_64-pc-windows-msvc",
+]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
+
+# Uncomment if want to use a custom CI configuration
+# # Ignore out-of-date contents
+# allow-dirty = ["ci"]
