--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,14 @@ yaml-rust = "0.4.5"
 inherits = "release"
 lto = "thin"
 
+[profile.dev]
+debug = 0
+
+[profile.release]
+lto = true
+codegen-units = 1
+# panic = "abort"
+
 # Config for 'cargo dist'
 [workspace.metadata.dist]
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
