--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ openapiv3 = "2.0.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
+sha256 = "1.5.0"
 simplelog = { version = "0.12.2", features = ["paris"] }
 trustfall = "0.7.1"
 yaml-rust = "0.4.5"
