--- a/plugin_openapi/Cargo.toml
+++ b/plugin_openapi/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 serde_yaml = "0.9.32"
 trustfall = "0.7.1"
+plugin_core = { path = "../plugin_core" }
