--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ eula = false
 anyhow = "1.0.80"
 clap = { version = "4.5.2", features = ["derive"] }
 hcl-rs = "0.16.8"
-merge-yaml-hash = "0.3.0"
+merge-yaml-hash = { git = "https://github.com/ZimboPro/merge-yaml-hash" }
 openapiv3 = "2.0.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
