--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,14 @@ eula = false
 
 [dependencies]
 anyhow = "1.0.81"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.2", features = ["derive"] }
 extism = "1.2.0"
 figment = { version = "0.10.15", features = ["env", "yaml"] }
 hcl-rs = "0.16.8"
 merge-yaml-hash = { git = "https://github.com/ZimboPro/merge-yaml-hash" }
 openapiv3 = "2.0.0"
 plugin_core = { path = "./plugin_core" }
+reqwest = { version = "0.12.3", features = ["json", "blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 serde_yaml = "0.9.34"
