--- a/plugin_openapi/Cargo.toml
+++ b/plugin_openapi/Cargo.toml
@@ -10,7 +10,7 @@ crate_type = ["cdylib"]
 
 [dependencies]
 extism-pdk = "1.1.0"
-merge-yaml-hash = "0.3.0"
+yaml-hash = "=0.3.0"
 openapiv3 = "2.0.0"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
