--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ clap = { version = "4.5.2", features = ["derive"] }
 extism = "1.2.0"
 figment = { version = "0.10.15", features = ["env", "yaml"] }
 hcl-rs = "0.16.8"
-merge-yaml-hash = { git = "https://github.com/ZimboPro/merge-yaml-hash" }
+yaml-hash = "=0.3.0"
 openapiv3 = "2.0.0"
 plugin_core = { path = "./plugin_core" }
 reqwest = { version = "0.12.3", features = ["json", "blocking"] }
